--- a/citrix101-lab03-demo05-ingress.yaml
+++ b/citrix101-lab03-demo05-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: citrix101-lab03-demo05-ingress
   annotations:
-   kubernetes.io/ingress.class: "citrix"
+   kubernetes.io/ingress.class: "citrix-cic-vpx"
    ingress.citrix.com/insecure-termination: "redirect"
    ingress.citrix.com/frontend-ip: "192.168.203.14"
 spec:
