--- a/citrix101-lab04-demo01-ingress-vpx.yaml
+++ b/citrix101-lab04-demo01-ingress-vpx.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: citrix101-lab04-demo01-ingress-vpx
   annotations:
-   kubernetes.io/ingress.class: "citrix"
+   kubernetes.io/ingress.class: "citrix-cic-vpx"
    ingress.citrix.com/insecure-termination: "redirect"
    # change the frontend-ip to the VIP you want to create
    ingress.citrix.com/frontend-ip: "192.168.203.15"
